samples/_failures_safe/1761042081_1fcd9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea171930.c: In function ‘main’:
./samples/SAFE/__tmp_ea171930.c:166: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ea171930.c:165:5: error: expected declaration or statement at end of input
  165 |     if
      |     ^~
